tests/compile_fail/derive_unknown_requires_variant.rs
#[derive(ktstr::Scheduler)]
#[scheduler(name = "bad")]
#[allow(dead_code)]
enum UnknownReqFlag {
    Alpha,
    #[flag(requires = [NonExistent])]
    Beta,
}

fn main() {}
